<resources>
    <string name="app_name">WheaterApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="temperature_with_degree">%.0f°</string>
    <string name="value_with_percentage">%1$d %%</string>
    <string name="value_with_kmph">%.1f kmph</string>

    <string name="current_weather">Current weather</string>
    <string name="add_city">Add city</string>
    <string name="selected_cities">Selected cities</string>
    <string name="settings">Settings</string>

    <string name="error_occurred">Oops … something went wrong</string>


    <!-- Thunderstorm -->
    <string name="thunderstorm_with_light_rain">Thunderstorm with light rain</string>
    <string name="thunderstorm_with_rain">Thunderstorm with rain</string>
    <string name="thunderstorm_with_heavy_rain">Thunderstorm with heavy rain</string>
    <string name="light_thunderstorm">Light thunderstorm</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="heavy_thunderstorm">Heavy thunderstorm</string>
    <string name="ragged_thunderstorm">ragged thunderstorm</string>
    <string name="thunderstorm_with_light_drizzle">Thunderstorm with light drizzle</string>
    <string name="thunderstorm_with_drizzle">Thunderstorm with drizzle</string>
    <string name="thunderstorm_with_heavy_drizzle">Thunderstorm with heavy drizzle</string>
    <!-- Drizzle -->
    <string name="light_intensity_drizzle">Light intensity drizzle</string>
    <string name="drizzle">Drizzle</string>
    <string name="heavy_intensity_drizzle">Heavy intensity drizzle</string>
    <string name="light_intensity_drizzle_rain">Light intensity drizzle rain</string>
    <string name="drizzle_rain">Drizzle rain</string>
    <string name="heavy_intensity_drizzle_rain">Heavy intensity drizzle rain</string>
    <string name="shower_rain_and_drizzle">Shower rain and drizzle</string>
    <string name="heavy_shower_rain_and_drizzle">Heavy shower rain and drizzle</string>
    <string name="shower_drizzle">Shower drizzle</string>
    <!-- Rain -->
    <string name="light_rain">Light rain</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="heavy_intensity_rain">Heavy intensity rain</string>
    <string name="very_heavy_rain">Very heavy rain</string>
    <string name="extreme_rain">Extreme rain</string>
    <string name="freezing_rain">Freezing rain</string>
    <string name="light_intensity_shower_rain">Light intensity shower rain</string>
    <string name="shower_rain">Shower rain</string>
    <string name="heavy_intensity_shower_rain">Heavy intensity shower rain</string>
    <string name="ragged_shower_rain">Ragged shower rain</string>
    <!-- Snow -->
    <string name="light_snow">Light snow</string>
    <string name="snow">Snow</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="sleet">Sleet</string>
    <string name="light_shower_sleet">Light shower sleet</string>
    <string name="shower_sleet">Shower sleet</string>
    <string name="light_rain_and_snow">Light rain and snow</string>
    <string name="rain_and_snow">Rain and snow</string>
    <string name="light_shower_snow">Light shower snow</string>
    <string name="shower_snow">Shower snow</string>
    <string name="heavy_shower_snow">Heavy shower snow</string>
    <!-- Atmosphere -->
    <string name="mist">Mist</string>
    <string name="smoke">Smoke</string>
    <string name="haze">Haze</string>
    <string name="sand_and_dust_whirls">Sand and dust whirls</string>
    <string name="fog">Fog</string>
    <string name="sand">Sand</string>
    <string name="dust">Dust</string>
    <string name="volcanic_ash">Volcanic ash</string>
    <string name="squalls">Squalls</string>
    <string name="tornado">Tornado</string>
    <!-- Clear -->
    <string name="clear_sky">Clear sky</string>
    <!-- Clouds -->
    <string name="few_clouds">Few clouds</string>
    <string name="scattered_clouds">Scattered clouds</string>
    <string name="broken_clouds">Broken clouds</string>
    <string name="overcast_clouds">Overcast clouds</string>
    <string name="search_city">Search city</string>

    <string name="no_city_found">No city found</string>
    <string name="result">Result</string>
    <string name="for_example_budapest_hu">For example: Budapest, HU</string>

    <string name="updated_now">Updated now</string>
    <string name="one_minute_ago">Updated 1 minute ago</string>
    <string name="minutes_ago">Updated %.0f minutes ago</string>
    <string name="one_hour_ago">Updated 1 hour ago</string>
    <string name="hours_ago">Updated %.0f hours ago</string>
    <string name="one_day_ago">Updated 1 day ago</string>
    <string name="days_ago">Updated %.0f days ago</string>
    <string name="updated_on">Updated on %.0f</string>


    <string name="today...">Today\n%1$s</string>
    <string name="tomorrow...">Tomorrow\n%1$s</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="chance_of_rain">Chance of\nRain</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="feels_like">Feels like</string>
    <string name="temperature_unit">Temperature unit</string>

    <string name="celsius">C°</string>
    <string name="fahrenheit">F°</string>
    <string name="dark_mode">Dark mode</string>
    <string name="cities">Cities</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>