<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sunrise"
            type="String" />
        <variable
            name="sunset"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_sunset">

            <TextView
                android:id="@+id/tv_sunrise_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/mcw_weather_main_textsize"
                android:text="@string/sunrise" />

            <ImageView
                android:id="@+id/iv_sunrise_icon"
                android:layout_width="92dp"
                android:layout_height="82dp"
                android:layout_margin="@dimen/icon_margin"
                android:src="@drawable/ic_weather_sunset" />

            <TextView
                android:id="@+id/tv_sunrise_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="8:31"
                android:textSize="@dimen/mcw_weather_main_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/ll_sunrise"
            app:layout_constraintBottom_toBottomOf="@+id/ll_sunrise"
            app:layout_constraintLeft_toRightOf="@id/ll_sunrise"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_sunset_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/mcw_weather_main_textsize"
                android:text="@string/sunset" />

            <ImageView
                android:id="@+id/iv_sunset_icon"
                android:layout_width="92dp"
                android:layout_height="82dp"
                android:layout_margin="@dimen/icon_margin"
                android:src="@drawable/ic_weather_sundown" />

            <TextView
                android:id="@+id/tv_sunset_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="8:31"
                android:textSize="@dimen/mcw_weather_main_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_chanceOfRain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/side_margin"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ll_sunrise"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_sunset">

            <TextView
                android:id="@+id/tv_chanceOfRain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/mcw_weather_main_textsize"
                android:text="@string/chance_of_rain" />

            <ImageView
                android:id="@+id/iv_chanceOfRain_icon"
                android:layout_width="92dp"
                android:layout_height="82dp"
                android:layout_margin="@dimen/icon_margin"
                android:src="@drawable/ic_weather_rain" />

            <TextView
                android:id="@+id/tv_chanceOfRain_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="20%"
                android:textSize="@dimen/mcw_weather_main_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/ll_chanceOfRain"
            app:layout_constraintBottom_toBottomOf="@+id/ll_chanceOfRain"
            app:layout_constraintLeft_toRightOf="@id/ll_sunrise"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/mcw_weather_main_textsize"
                android:text="@string/humidity" />

            <ImageView
                android:id="@+id/iv_humidity_icon"
                android:layout_width="92dp"
                android:layout_height="82dp"
                android:layout_margin="@dimen/icon_margin"
                android:src="@drawable/ic_weather_drop" />

            <TextView
                android:id="@+id/tv_humidity_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="80%"
                android:textSize="@dimen/mcw_weather_main_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/side_margin"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ll_chanceOfRain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_sunset">

            <TextView
                android:id="@+id/tv_wind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/mcw_weather_main_textsize"
                android:text="@string/wind" />

            <ImageView
                android:id="@+id/iv_wind_icon"
                android:layout_width="92dp"
                android:layout_height="82dp"
                android:layout_margin="@dimen/icon_margin"
                android:src="@drawable/ic_weather_wind_s" />

            <TextView
                android:id="@+id/tv_wind_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="20%"
                android:textSize="@dimen/mcw_weather_main_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/ll_wind"
            app:layout_constraintBottom_toBottomOf="@+id/ll_wind"
            app:layout_constraintLeft_toRightOf="@id/ll_sunrise"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_feelsLike_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/mcw_weather_main_textsize"
                android:text="@string/feels_like" />

            <ImageView
                android:id="@+id/iv_feelsLike_icon"
                android:layout_width="92dp"
                android:layout_height="82dp"
                android:layout_margin="@dimen/icon_margin"
                android:src="@drawable/ic_weather_snowflake" />

            <TextView
                android:id="@+id/tv_feelsLike_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="80%"
                android:textSize="@dimen/mcw_weather_main_textsize" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>